--- a/index.html
+++ b/index.html
@@ -14,38 +14,106 @@
 
 <body class="body">
   <main class="page">
-    
+
     <section class="header">
       <img src="./sprint-3-images/header-logo.svg" class="header__img">
       <div class="header__lang">
         <a href="" class="header__lang_ru">Ru</a>
         <a href="" class="header__lang_en">En</a>
-      </div>  
+      </div>
     </section>
 
     <section class="message">
-        <h1 class="message__title">Путешествия по России</h1>
-        <h4 class="message__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h4>
-        <img src="./sprint-3-images/lead-polka.jpg" alt="картинка купе поезда с окном" class="message__polka">
-        <p class="message__text">ваша полка — верхняя</p>
+      <h1 class="message__title">Путешествия по России</h1>
+      <h4 class="message__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h4>
+      <img src="./sprint-3-images/lead-polka.jpg" alt="картинка купе поезда с окном" class="message__polka">
+      <p class="message__text">ваша полка — верхняя</p>
     </section>
 
     <section class="infor">
-      <h2 class="infor__title">Чего мы там не видели?</h2>
-      <blockquote class="infor__blockquote">
-        <p class="infor__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-      </blockquote>
-      <ul class="infor__digits">
-        <li>Часовых поясов 11</li>
-        <li>Объектов природного наследия ЮНЕСКО 12</li>
-        <li>Объектов культурного наследия ЮНЕСКО 16</li>
-        <li>Природных заповедников 105</li>
-        <li>Аэропортов 241</li>
-      </ul>
+      <div class="infor__content">
+        <h2 class="infor__title">Чего мы там не видели?</h2>
+        <blockquote class="infor__blockquote">
+          <p class="infor__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
+            — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        </blockquote>
+        <ul class="infor__digits">
+          <li>Часовых поясов 11</li>
+          <li>Объектов природного наследия ЮНЕСКО 12</li>
+          <li>Объектов культурного наследия ЮНЕСКО 16</li>
+          <li>Природных заповедников 105</li>
+          <li>Аэропортов 241</li>
+        </ul>
+      </div>
     </section>
 
+    <section class="photo-grid">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-sochi.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-tuman.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-train.jpg" alt="" data-type="auto">
+    </section>
 
-    
+    <section class="regions">
+      <div class="region__conteiner">
+        <div class="region__item">Куршская коса</div>
+        <div class="region__item">
+          <div>
+          <p class="region__url">URL</p>
+          <a href="http://park-kosa.ru" class="region__ref"></a>
+          </div>
+        </div>
+        <div class="region__item">3</div>
+        <div class="region__item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</div>
+        <div class="region__item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</div>
+      </div>
+
+
+
+    </section>
+
+    <!--<section class="regions">
+      <div class="region">
+        <div class="region__name">
+          <div class="region__first">
+            <h1 class="region__title">Куршская коса</h1>
+            <div>
+              <p class="region__url">URL</p>
+              <a href="http://park-kosa.ru" class="region__ref"></a>
+            </div>
+          </div>
+          <div class="region__infor">
+            <img src="./sprint-3-images/place-kosa.jpg" class="region__pic">
+            <div class="region_second">
+              <quote class="region__quote">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
+                — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+                Уникальная природная зона на краю российского анклава.</quote>
+              <quote class="region__second-quote">На этом Калининградская область не заканчивается. Для путешественника
+                и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
+                наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
+                спокойствие природы и запах стального, прохладного моря.</quote>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>*/-->
+
+
+
+
+
     <section class="cover"> <!-- z-index = 0 -->
       <!-- before (затеняшка) -->
       <div class="cover__content"> <!-- z-index = 1 -->
