--- a/index.html
+++ b/index.html
@@ -68,73 +68,54 @@
 
     <section class="regions">
       <div class="region__conteiner">
-        <div class="region__item">Куршская коса</div>
-        <div class="region__item">
+        <figure class="region__item">
+          <p class="region__title">Куршская коса</p>
+        </figure>
+        <figure class="region__item">
           <div>
-          <p class="region__url">URL</p>
-          <a href="http://park-kosa.ru" class="region__ref"></a>
+            <p class="region__url">URL</p>
+            <a href="http://park-kosa.ru" alt="ссылка на сайт региона" class="region__link">park-kosa.ru</a>
           </div>
+        </figure>
+        <figure class="region__item"><img src="./sprint-3-images/place-kosa.jpg" class="region__image"></figure>
+        <div class="region__item">
+          <p class="region__nature">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
+            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
+            природная зона на краю российского анклава.</p>
+          </figure>
+          <figure class="region__item">
+            <p class="region__nature">На этом Калининградская область не заканчивается. Для путешественника и
+              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+              и запах стального, прохладного моря.</p>
+          </figure>
         </div>
-        <div class="region__item">3</div>
-        <div class="region__item">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</div>
-        <div class="region__item">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</div>
-      </div>
-
-
-
     </section>
-
-    <!--<section class="regions">
-      <div class="region">
-        <div class="region__name">
-          <div class="region__first">
-            <h1 class="region__title">Куршская коса</h1>
-            <div>
-              <p class="region__url">URL</p>
-              <a href="http://park-kosa.ru" class="region__ref"></a>
-            </div>
-          </div>
-          <div class="region__infor">
-            <img src="./sprint-3-images/place-kosa.jpg" class="region__pic">
-            <div class="region_second">
-              <quote class="region__quote">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
-                — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
-                Уникальная природная зона на краю российского анклава.</quote>
-              <quote class="region__second-quote">На этом Калининградская область не заканчивается. Для путешественника
-                и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое
-                наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
-                спокойствие природы и запах стального, прохладного моря.</quote>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>*/-->
-
-
-
-
 
     <section class="cover"> <!-- z-index = 0 -->
       <!-- before (затеняшка) -->
       <div class="cover__content"> <!-- z-index = 1 -->
-        <h1 class="cover__title"><span class="cover__name">Henri</span>Cartier&#8209;Bresson</h1>
-        <ul class="cover__subtitle">
-          <li>Boston Commons, 1947</li>
-          <li>Silver gelatin print</li>
-          <li>Image: 11 7/8 x 17 1/16 inches</li>
-          <li>Paper: 15 13/16 x 19 3/4 inches</li>
-          <li>Signed in ink with embossed artist stamp recto</li>
-        </ul>
-        <ul class="cover__subtitle">
-          <li>Boston Commons, 1947</li>
-          <li>Silver gelatin print</li>
-          <li>Image: 11 7/8 x 17 1/16 inches</li>
-          <li>Paper: 15 13/16 x 19 3/4 inches</li>
-          <li>Signed in ink with embossed artist stamp recto</li>
-        </ul>
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
       </div>
     </section>
   </main>
+
+  <footer class="footer">
+  <div class="footer__content">
+    <nav class="footer__links>
+      <ul>
+        <li><a href="https://yandex.ru/maps" class="footer__maps">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__pogoda">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__rasp">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__calendar">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__travel">Карты</a></li>
+      </ul>
+    </nav>
+    <p class="footer__author">&#174; Анатолий Максаков</p>
+  </div>
+  </footer>
 </body>
 
 </html>
