--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     <section class="infor">
       <div class="infor__content">
         <h2 class="infor__title">Чего мы там не видели?</h2>
-        <blockquote class="infor__blockquote">
+        <!--<blockquote class="infor__blockquote">-->
           <p class="infor__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
             провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
             вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
             красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
             — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
             километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-        </blockquote>
+        <!--</blockquote>-->
         <ul class="infor__digits">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО 12</li>
-          <li>Объектов культурного наследия ЮНЕСКО 16</li>
-          <li>Природных заповедников 105</li>
-          <li>Аэропортов 241</li>
+          <li><p class="infor__digits-text">Часовых поясов 11</p></li>
+          <li><p class="infor__digits-text">Объектов природного наследия ЮНЕСКО 12</p></li>
+          <li><p class="infor__digits-text">Объектов культурного наследия ЮНЕСКО 16</p></li>
+          <li><p class="infor__digits-text">Природных заповедников 105</p></li>
+          <li><p class="infor__digits-text">Аэропортов 241</p></li>
         </ul>
       </div>
     </section>
@@ -68,33 +68,102 @@
 
     <section class="regions">
       <div class="region__conteiner">
-        <figure class="region__item">
-          <p class="region__title">Куршская коса</p>
-        </figure>
-        <figure class="region__item">
-          <div>
-            <p class="region__url">URL</p>
-            <a href="http://park-kosa.ru" alt="ссылка на сайт региона" class="region__link">park-kosa.ru</a>
-          </div>
-        </figure>
-        <figure class="region__item"><img src="./sprint-3-images/place-kosa.jpg" class="region__image"></figure>
-        <div class="region__item">
+        <p class="region__title">Куршская коса</p>
+        <div class="region__links">
+          <p class="region__url">URL</p>
+          <a href="http://park-kosa.ru" alt="ссылка на сайт региона" class="region__link">park-kosa.ru</a>
+        </div>
+        <img src="./sprint-3-images/place-kosa.jpg" class="region__image">
+        <div>
           <p class="region__nature">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
             природная зона на краю российского анклава.</p>
-          </figure>
-          <figure class="region__item">
-            <p class="region__nature">На этом Калининградская область не заканчивается. Для путешественника и
-              исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
-              и запах стального, прохладного моря.</p>
-          </figure>
+          <p class="region__nature">На этом Калининградская область не заканчивается. Для путешественника и
+            исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие
+            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы
+            и запах стального, прохладного моря.</p>
         </div>
+      </div>
+
+      <div class="region__conteiner">
+        <p class="region__title">Кольский</p>
+        <div class="region__links">
+          <p class="region__url">URL</p>
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" alt="ссылка на сайт региона"
+            class="region__link">National Geographic</a>
+        </div>
+        <img src="./sprint-3-images/place-kolsky.jpg" class="region__image">
+        <div>
+          <p class="region__nature">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
+            юг —
+            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="region__nature">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
+            в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
+            об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а
+            от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+            в Мурманск.</p>
+        </div>
+      </div>
+
+      <div class="region__conteiner">
+        <p class="region__title">Алтай</p>
+        <div class="region__links">
+          <p class="region__url">URL</p>
+          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" alt="ссылка на сайт региона"
+            class="region__link">YouTube</a>
+        </div>
+        <img src="./sprint-3-images/place-altai.jpg" class="region__image">
+        <div>
+          <p class="region__nature">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
+            вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле
+            окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+          <p class="region__nature">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
+            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+            пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+        </div>
+      </div>
+
+      <div class="region__conteiner">
+        <p class="region__title">Зимний Байкал</p>
+        <div class="region__links">
+          <p class="region__url">URL</p>
+          <a href="https://vk.com/baikalmile" alt="ссылка на сайт региона"
+            class="region__link">https://vk.com/baikalmile</a>
+        </div>
+        <img src="./sprint-3-images/place-winter-baikal.jpg" class="region__image">
+        <div>
+          <p class="region__nature">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
+            большой источник пресной воды и одно из красивейших мест в России.</p>
+          <p class="region__nature">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
+            Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно
+            бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд —
+            197.011 км/ч.</p>
+        </div>
+      </div>
+
+      <div class="region__conteiner">
+        <p class="region__title">Карелия</p>
+        <div class="region__links">
+          <p class="region__url">URL</p>
+          <a href="https://vk.com/baikalmile" alt="ссылка на сайт региона" class="region__link">http://vodlozero.ru/</a>
+        </div>
+        <img src="./sprint-3-images/place-karelia.jpg" class="region__image">
+        <div>
+          <p class="region__nature">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
+            лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
+            национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем
+            полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В
+            девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от
+            земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+
+        </div>
+      </div>
+
     </section>
 
-    <section class="cover"> <!-- z-index = 0 -->
-      <!-- before (затеняшка) -->
-      <div class="cover__content"> <!-- z-index = 1 -->
+
+    <section class="cover">
+      <div class="cover__content">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
@@ -103,18 +172,20 @@
   </main>
 
   <footer class="footer">
-  <div class="footer__content">
-    <nav class="footer__links>
-      <ul>
-        <li><a href="https://yandex.ru/maps" class="footer__maps">Карты</a></li>
-        <li><a href="https://yandex.ru/pogoda" class="footer__pogoda">Погода</a></li>
-        <li><a href="https://rasp.yandex.ru" class="footer__rasp">Расписание</a></li>
-        <li><a href="https://calendar.yandex.ru" class="footer__calendar">Календарь</a></li>
-        <li><a href="https://travel.yandex.ru" class="footer__travel">Карты</a></li>
+    <div class="footer-columns">
+      <!--<nav class="footer__column footer__column_content_infor">-->
+      <ul class="footer__column footer__column-links">
+        <li><a href="https://yandex.ru/maps" class="footer__column-maps">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__column-pogoda">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__column-rasp">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__column-calendar">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__column-travel">Карты</a></li>
       </ul>
-    </nav>
-    <p class="footer__author">&#174; Анатолий Максаков</p>
-  </div>
+      <!--</nav>-->
+      <!--<div class="footer__column footer__column_content_copiright">-->
+      <p class="footer__column-author">&#174; 2020 Анатолий Максаков</p>
+      <!--</div>-->
+    </div>
   </footer>
 </body>
 
