Finish to print

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -16,10 +16,10 @@
   <main class="page">
 
     <section class="header">
-      <img src="./sprint-3-images/header-logo.svg" class="header__img">
+      <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__img">
       <div class="header__lang">
-        <a href="" class="header__lang_ru">Ru</a>
-        <a href="" class="header__lang_en">En</a>
+        <a href="" class="header__lang-ru">Ru</a>
+        <a href="" class="header__lang-en">En</a>
       </div>
     </section>
 
@@ -34,46 +34,59 @@
       <div class="infor__content">
         <h2 class="infor__title">Чего мы там не видели?</h2>
         <!--<blockquote class="infor__blockquote">-->
-          <p class="infor__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-            красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
-            — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-            километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <p class="infor__quote">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова
+          — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <!--</blockquote>-->
         <ul class="infor__digits">
-          <li><p class="infor__digits-text">Часовых поясов 11</p></li>
-          <li><p class="infor__digits-text">Объектов природного наследия ЮНЕСКО 12</p></li>
-          <li><p class="infor__digits-text">Объектов культурного наследия ЮНЕСКО 16</p></li>
-          <li><p class="infor__digits-text">Природных заповедников 105</p></li>
-          <li><p class="infor__digits-text">Аэропортов 241</p></li>
+          <li>
+            <p class="infor__digits-text">Часовых поясов 11</p>
+          </li>
+          <li>
+            <p class="infor__digits-text">Объектов природного наследия ЮНЕСКО 12</p>
+          </li>
+          <li>
+            <p class="infor__digits-text">Объектов культурного наследия ЮНЕСКО 16</p>
+          </li>
+          <li>
+            <p class="infor__digits-text">Природных заповедников 105</p>
+          </li>
+          <li>
+            <p class="infor__digits-text">Аэропортов 241</p>
+          </li>
         </ul>
       </div>
     </section>
 
     <section class="photo-grid">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-sochi.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-tuman.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-train.jpg" alt="" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="фото Байкала"
+        data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="фото Камчатки"
+        data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="фото Камчатки"
+        data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="фото Эльбруса" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal.jpg" alt="фото Байкала" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-sochi.jpg" alt="фото Сочи" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-tuman.jpg" alt="фото туман" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-train.jpg" alt="фото поезда" data-type="auto">
     </section>
 
-    <section class="regions">
+    <section class="region">
       <div class="region__conteiner">
         <p class="region__title">Куршская коса</p>
         <div class="region__links">
           <p class="region__url">URL</p>
-          <a href="http://park-kosa.ru" alt="ссылка на сайт региона" class="region__link">park-kosa.ru</a>
+          <a href="http://park-kosa.ru" class="region__link">park-kosa.ru</a>
         </div>
-        <img src="./sprint-3-images/place-kosa.jpg" class="region__image">
+        <img src="./sprint-3-images/place-kosa.jpg" alt="фото Куршская коса" class="region__image">
         <div>
           <p class="region__nature">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
             спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -89,14 +102,13 @@
         <p class="region__title">Кольский</p>
         <div class="region__links">
           <p class="region__url">URL</p>
-          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" alt="ссылка на сайт региона"
-            class="region__link">National Geographic</a>
+          <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="region__link">National
+            Geographic</a>
         </div>
-        <img src="./sprint-3-images/place-kolsky.jpg" class="region__image">
+        <img src="./sprint-3-images/place-kolsky.jpg" alt="фото Кольский полуостров" class="region__image">
         <div>
           <p class="region__nature">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на
-            юг —
-            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="region__nature">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
             в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
             об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а
@@ -109,10 +121,9 @@
         <p class="region__title">Алтай</p>
         <div class="region__links">
           <p class="region__url">URL</p>
-          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" alt="ссылка на сайт региона"
-            class="region__link">YouTube</a>
+          <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="region__link">YouTube</a>
         </div>
-        <img src="./sprint-3-images/place-altai.jpg" class="region__image">
+        <img src="./sprint-3-images/place-altai.jpg" alt="фото горы Алтая" class="region__image">
         <div>
           <p class="region__nature">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать
             вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле
@@ -127,14 +138,13 @@
         <p class="region__title">Зимний Байкал</p>
         <div class="region__links">
           <p class="region__url">URL</p>
-          <a href="https://vk.com/baikalmile" alt="ссылка на сайт региона"
-            class="region__link">https://vk.com/baikalmile</a>
+          <a href="https://vk.com/baikalmile" class="region__link">https://vk.com/baikalmile</a>
         </div>
-        <img src="./sprint-3-images/place-winter-baikal.jpg" class="region__image">
+        <img src="./sprint-3-images/place-winter-baikal.jpg" alt="фото озера Байкал зимой" class="region__image">
         <div>
           <p class="region__nature">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый
             большой источник пресной воды и одно из красивейших мест в России.</p>
-          <p class="region__nature">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
+          <p class="region__nature">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу.
             Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно
             бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд —
             197.011 км/ч.</p>
@@ -145,9 +155,9 @@
         <p class="region__title">Карелия</p>
         <div class="region__links">
           <p class="region__url">URL</p>
-          <a href="https://vk.com/baikalmile" alt="ссылка на сайт региона" class="region__link">http://vodlozero.ru/</a>
+          <a href="https://vk.com/baikalmile" class="region__link">http://vodlozero.ru/</a>
         </div>
-        <img src="./sprint-3-images/place-karelia.jpg" class="region__image">
+        <img src="./sprint-3-images/place-karelia.jpg" alt="фото просторы Карелии" class="region__image">
         <div>
           <p class="region__nature">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
             лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
@@ -173,7 +183,6 @@
 
   <footer class="footer">
     <div class="footer-columns">
-      <!--<nav class="footer__column footer__column_content_infor">-->
       <ul class="footer__column footer__column-links">
         <li><a href="https://yandex.ru/maps" class="footer__column-maps">Карты</a></li>
         <li><a href="https://yandex.ru/pogoda" class="footer__column-pogoda">Погода</a></li>
@@ -181,10 +190,7 @@
         <li><a href="https://calendar.yandex.ru" class="footer__column-calendar">Календарь</a></li>
         <li><a href="https://travel.yandex.ru" class="footer__column-travel">Карты</a></li>
       </ul>
-      <!--</nav>-->
-      <!--<div class="footer__column footer__column_content_copiright">-->
       <p class="footer__column-author">&#174; 2020 Анатолий Максаков</p>
-      <!--</div>-->
     </div>
   </footer>
 </body>
