--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" lang="En">
 
 <head>
   <meta charset="UTF-8">
@@ -18,7 +18,7 @@
     <section class="header">
       <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__img">
       <div class="header__lang">
-        <a href="" class="header__lang-ru">Ru</a>
+        <a href="" class="header__lang-ru_active">Ru</a>
         <a href="" class="header__lang-en">En</a>
       </div>
     </section>
@@ -180,7 +180,7 @@
   </main>
 
   <footer class="footer">
-    <div class="footer-columns">
+    <div class="footer__columns">
       <ul class="footer__column footer__column-links">
         <li><a href="https://yandex.ru/maps" class="footer__column-maps">Карты</a></li>
         <li><a href="https://yandex.ru/pogoda" class="footer__column-pogoda">Погода</a></li>
