Путешествие по России 1.1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name='description' content='портфолио Анатолия на Яндекс.Практикуме'>
   <meta name='keywords' content='html, css'>
   <meta name="author" content="Анатолий">
-  <link rel="stylesheet" href="https://code.s3.yandex.net/web-code/normalize.css">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
+  <link rel="stylesheet" href="./vendor/fonts.css">
   <title>Путешествие по России</title>
 </head>
 
@@ -60,20 +61,20 @@
     </section>
 
     <section class="photo-grid">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="фото вершины гор" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="фото Байкала"
         data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="фото Камчатки"
         data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="фото Камчатки"
         data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="фото молла от волн" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="фото Эльбруса" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-baikal.jpg" alt="фото Байкала" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-arisa.jpg" alt="фото колеса авто на льду" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-sochi.jpg" alt="фото Сочи" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-tuman.jpg" alt="фото туман" data-type="auto">
-      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="фото" data-type="auto">
+      <img class="photo-grid__image" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="фото облаков из самолета" data-type="auto">
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-train.jpg" alt="фото поезда" data-type="auto">
     </section>
 
