--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section class="header">
       <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__img">
       <div class="header__lang">
-        <a href="" class="header__lang-ru_active">Ru</a>
-        <a href="" class="header__lang-en">En</a>
+        <a href="" class="header__lang_lang-ru_active">Ru</a>
+        <a href="" class="header__lang_lang-en">En</a>
       </div>
     </section>
 
