--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <section class="header">
       <img src="./sprint-3-images/header-logo.svg" alt="логотип" class="header__img">
-      <div class="header__lang">
-        <a href="" class="header__lang_lang-ru_active">Ru</a>
-        <a href="" class="header__lang_lang-en">En</a>
+      <div class="langs header__lang">
+        <a href="" class="langs__lang langs__lang_active">Ru</a>
+        <a href="" class="langs__lang">En</a>
       </div>
     </section>
 
