--- a/index.html
+++ b/index.html
@@ -172,36 +172,37 @@
         </div>
       </div>
     </section>
-<!--
+    <!--
     <section class="cover">
       <h2 class="cover__title">До Байкала «на собаках»</h2>
       <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
       </p>
     </section>
-  --> 
-  
-  <section> <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="covernew">
-    <h2 class="covernew__title">До Байкала «на собаках»</h2>
-    <p class="covernew__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
-    </p>
-  </a>
-  </section>
+  -->
+
+    <section> <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="covernew">
+        <h2 class="covernew__title">До Байкала «на собаках»</h2>
+        <p class="covernew__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.
+        </p>
+      </a>
+    </section>
   </main>
 
   <footer class="footer">
-    
-      <nav>
-        <ul class="footer__column footer__column_links">
-          <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-          <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-          <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-          <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-          <li><a href="https://travel.yandex.ru" class="footer__link">Карты</a></li>
-        </ul>
-      </nav> 
 
-      <p class="footer__column footer__column_copyright">&#174; 2020 Анатолий Максаков</p>
-    
+    <nav>
+      <ul class="footer__column footer__column_links">
+        <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+        <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+        <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+        <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link">Карты</a></li>
+      </ul>
+    </nav>
+
+    <p class="footer__column footer__column_copyright">&#174; 2020 Анатолий Максаков</p>
+
   </footer>
 </body>
 
