--- a/index.html
+++ b/index.html
@@ -197,11 +197,11 @@
         <li><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
         <li><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
         <li><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-        <li><a href="https://travel.yandex.ru" class="footer__link">Карты</a></li>
+        <li><a href="https://travel.yandex.ru" class="footer__link">Путешествие</a></li>
       </ul>
     </nav>
 
-    <p class="footer__column footer__column_copyright">&#174; 2020 Анатолий Максаков</p>
+    <p class="footer__column footer__column_copyright">&#174; 2023 Анатолий Максаков</p>
 
   </footer>
 </body>
