Finish for ipad

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             Geographic</a>
         </div>
         <img src="./sprint-3-images/place-kolsky.jpg" alt="фото Кольский полуостров" class="region__image">
-        <div class="region__infor">
+        <div>
           <p class="region__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра,
             от&nbsp;которой
             на юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым
