Путешествие по России 1.3

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <img class="photo-grid__image" src="./sprint-3-images/photo-grid-train.jpg" alt="фото поезда" data-type="auto">
     </section>
 
-    <section class="region">
-      <article class="region__conteiner">
+    <section class="region" aria-label="Красивые места России">
+      <article class="region__container">
         <h2 class="region__title">Куршская коса</h2>
         <div class="region__links">
           <p class="region__url-heading">url</p>
@@ -88,16 +88,16 @@
             спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря
             с&nbsp;другой. Уникальная
             природная зона на&nbsp;краю российского анклава.</p>
-            <p class="region__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и
-              исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России,     Балтийская
-              коса,&nbsp;&mdash; и&nbsp;немецкое наследие
-              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
-              природы
-              и&nbsp;запах стального, прохладного моря.</p>
+          <p class="region__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается. Для путешественника и
+            исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская
+            коса,&nbsp;&mdash; и&nbsp;немецкое наследие
+            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
+            природы
+            и&nbsp;запах стального, прохладного моря.</p>
         </div>
       </article>
 
-      <article class="region__conteiner">
+      <article class="region__container" aria-label="Красивые места России">
         <h2 class="region__title">Кольский</h2>
         <div class="region__links">
           <p class="region__url-heading">url</p>
@@ -122,7 +122,7 @@
         </div>
       </article>
 
-      <article class="region__conteiner">
+      <article class="region__container" aria-label="Красивые места России">
         <h2 class="region__title">Алтай</h2>
         <div class="region__links">
           <p class="region__url-heading">url</p>
@@ -142,7 +142,7 @@
         </div>
       </article>
 
-      <article class="region__conteiner">
+      <article class="region__container" aria-label="Красивые места России">
         <h2 class="region__title">Зимний Байкал</h2>
         <div class="region__links">
           <p class="region__url-heading">url</p>
@@ -162,7 +162,7 @@
         </div>
       </article>
 
-      <article class="region__conteiner">
+      <article class="region__container" aria-label="Красивые места России">
         <h2 class="region__title">Карелия</h2>
         <div class="region__links">
           <p class="region__url-heading">url</p>
@@ -183,7 +183,8 @@
       </article>
     </section>
 
-    <section> <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover" target="_blank">
+    <section class="cover">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.
@@ -210,4 +211,3 @@
 </body>
 
 </html>
-
